<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.TasksActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lstTasks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/llAddTaskPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/tasks_activity_item" />

    <TextView
        android:id="@+id/lblEmptyView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/tasks_lblEmptyView_drawablePadding"
        android:gravity="center"
        android:text="@string/tasks_no_tasks_yet"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorPrimaryDark"
        app:drawableTint="@color/colorPrimary"
        app:drawableTopCompat="@drawable/ic_playlist_add_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/lstTasks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lstTasks" />

    <RelativeLayout
        android:id="@+id/llAddTaskPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingStart="@dimen/tasks_llAddTaskPanel_horizontal_padding"
        android:paddingTop="@dimen/tasks_llAddTaskPanel_vertical_padding"
        android:paddingEnd="@dimen/tasks_llAddTaskPanel_horizontal_padding"
        android:paddingBottom="@dimen/tasks_llAddTaskPanel_vertical_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/txtConcept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/imgAddTask"
            android:backgroundTint="@color/colorWhiteSemiTransparent"
            android:hint="@string/tasks_txtConcept"
            android:inputType="text"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhiteSemiTransparent"
            tools:ignore="Autofill">

            <requestFocus />
        </EditText>

        <ImageView
            android:id="@+id/imgAddTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/tasks_llAddTaskPanel_horizontal_padding"
            android:contentDescription="@string/imgAddTask"
            android:src="@drawable/ic_send_black_24dp"
            android:tint="@color/colorWhite" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>